--- a/README.adoc
+++ b/README.adoc
@@ -1,6 +1,6 @@
 = USB Host Library for Arduino =
 
-The USBHost library allows an Arduino Due board to appear as a USB host, enabling it to communicate with peripherals like USB mice and keyboards.
+The USBHost library allows an Arduino Due board to appear as a USB host, enabling it to communicate with peripherals like USB mice, keyboards and HTC Vive trackers.
 
 For more information about this library please visit us at
 http://www.arduino.cc/en/Reference/USBHost
