--- a/README.adoc
+++ b/README.adoc
@@ -1,6 +1,8 @@
 = USB Host Library for Arduino =
 
-The USBHost library allows an Arduino Due board to appear as a USB host, enabling it to communicate with peripherals like USB mice, keyboards and HTC Vive trackers.
+The USBHost library allows an Arduino Due board to appear as a USB host, enabling it to communicate with peripherals like USB mice, keyboards and HTC Vive trackers (requires at least tracker firmware v.20).
+
+For an USBHost library supporting Vive tracker for Arduino SAMD boards see [here](https://github.com/matzman666/USBHost-samd).
 
 For more information about this library please visit us at
 http://www.arduino.cc/en/Reference/USBHost
